test: caching and insert of payroll period
